tests/purs/failing/3619-a.purs
-- @shouldFailWith AmbiguousTypeVariables
module Main where

import Control.Applicative (pure)

bar = foo \_ ->
  pure 10
